Add responsive design for mobile view in App component and update styles

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             min-height: 100vh;
         }
 
+        /* Responsive utilities */
+        @media (max-width: 768px) {
+            body {
+                font-size: 14px;
+            }
+        }
+
         .loading {
             display: flex;
             justify-content: center;
